--- a/miruene_demo_v2/www/css/style.css
+++ b/miruene_demo_v2/www/css/style.css
@@ -1,12 +1,14 @@
 /**/
 
- body {
+body{
     background: #FFF6E6;
-    width :2736px;
+    width:2736px;
     height:1824px;
     zoom:0.5;
     overflow-x: hidden;
     overflow-y: hidden;
+    margin:0;
+    padding:0;
 }
 
 .page__background {
@@ -31,7 +33,6 @@
     font-family: Arial, Helvetica, sans-serif;
     font-size: 2.5em;
     color: #ffffff;
-    //padding: 10px 20px;
     background: -moz-linear-gradient(
         top,
     	#ffffff 0%,
@@ -308,7 +309,6 @@ video {
 }
 
 
-// scene
 .scene_field {
  width:auto; 
  height:20%;
@@ -316,10 +316,7 @@ video {
 
 /* 縮小サイズ */
 .small_view {
-/*
-    top: 9%;
-    left: 20%;
-*/
+
     width: 35%;
 }
 /* シナリオ　家電　点滅 */
@@ -400,8 +397,8 @@ video {
 
 
 body {
-    animation: fadeIn 0.3s ease 0s 1 normal;
-    -webkit-animation: fadeIn 0.3s ease 0s 1 normal;
+    animation: fadeIn1 1.0s ease 0s 1 normal;
+    -webkit-animation: fadeIn 1.0s ease 0s 1 normal;
 }
 
 @keyframes fadeIn {
@@ -414,4 +411,45 @@ body {
     100% {opacity: 1}
 }
 
+
+
+
+.text_animation {
+  -webkit-animation-name: change;
+  -webkit-animation-duration: 0.3s;
+  -webkit-animation-iteration-count: infinite;
+  animation-name: change,opacity;
+  animation-duration: 0.3s;
+  animation-iteration-count: 1;
+}
+
+
+@-webkit-keyframes opacity {
+  0%, 100% {opacity:0.3;}
+  50% {opacity:1;}
+}
+
+@-webkit-keyframes change {
+  0%,  100% {transform:scaleX(1);}
+//  50% {transform:scaleX(-1);}
+}
+
+@keyframes opacity {
+  0%, 100% {opacity:0.3;}
+  50% {opacity:1;}
+}
+
+@keyframes change {
+    0%, 100% {
+        transform: scaleX(1);
+    }
+/*
+//    50% {
+//       transform: scaleX(-1);
+//   }
+
+*/
+
+
+}
 
